--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@types/node": "18.16.1",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
+    "axios": "^1.4.0",
+    "bootstrap": "^5.3.0",
     "next": "13.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
